# ChangeLog for squashmount

*squashmount-3.6
	Martin Väth <martin at mvath.de>:
	- Introduce CHMOD, CHOWN; default to CHMOD = 0644

*squashmount-3.5
*squashmount-3.4
	Martin Väth <martin at mvath.de>:
	- No locking default for status and print-*
	- zsh completion: Use --no-locking when calling squashmount

*squashmount-3.3
*squashmount-3.2
	Martin Väth <martin at mvath.de>:
	- Improve documentation

*squashmount-3.1
*squashmount-3.0
	Martin Väth <martin at mvath.de>:
	- modprobe modules by default
	- Support flags !, !!, ?, ??, # in @order
	- Support $modprobe_squashfs
	- Set @order to empty string if not needed
	- Use qw(...) in examples where it makes sense
	- standard_mount() and added_hash() can now be called without &

*squashmount-2.10
	Martin Väth <martin at mvath.de>:
	- Support FILL and FILLFUNC

*squashmount-2.9
	Martin Väth <martin at mvath.de>:
	- fix tmpfiles.d content which caused sometimes breakage with systemd
	- fix systemd/openrc deps to avoid most problems even with "D" setting
	- document emergency case explicitly
	- improve behaviour in emergency case (getting DIR)
	- cosmetical code cleanup

*squashmount-2.8
	Martin Väth <martin at mvath.de>:
	- fix: --error and --fatal can work together
	- fix restart: postpone forget, not releasing lock too early
	- Improve error handling for writing to /run/squashmount

*squashmount-2.7
	Martin Väth <martin at mvath.de>:
	- Introduce --locking and $locking and make it default
	- New check command
	- Add tmpfiles.d
	- squashmount -fI {u,}mount now even continues after error
	- Allow -f for status and print-... and improve results without -f

*squashmount-2.6
	Martin Väth <martin at mvath.de>:
	- Require -f for restart to forget+start an umounted mountpoint
	- Introduce --ignore-state to deal better with exceptional
	  situations caused by bugs (in squashmount or its config) or
	  by manual interfering

*squashmount-2.5
	Martin Väth <martin at mvath.de>: